# perception-experiment

./: .gitignore  CMakeLists.txt  analysis.ipynb  main.cpp  main2.cpp
results/: CCD1.txt  CCD2.txt  CCD3.txt  CCL1.txt  CCL2.txt  CCL3.txt  CFD1.txt  CFD2.txt  CFD3.txt  CFD4.txt  CFL1.txt  CFL2.txt  CFL3.txt  CFL4.txt  TCD1.txt  TCD2.txt  TCD3.txt  TCL-noglasses.txt  TCL1.txt  TCL2.txt  TCL3.txt  TFD1.txt  TFD2.txt  TFD3.txt  TFD4.txt  TFL1.txt  TFL2.txt  TFL3.txt  TFL4.txt  WCD1.txt  WCD2.txt  WCD3.txt  WCD5.txt  WCL-noglasses.txt  WCL1.txt  WCL2.txt  WCL3.txt  WCL5.txt  WFD1.txt  WFD2.txt  (+6 more)
